# gym-chess

./: .gitignore  Cargo.dev.toml  Cargo.py.toml  Cargo.toml  LICENSE.md  Makefile  README.md  chess_v5.py.lprof  fen.py  graphs.py  lint  main.py  outfile.txt  play_random_vs_bot_2.py.lprof  pyproject.toml  q_learning.py  q_learning_just_states.py  requirements.txt  script.py  setup.py
examples/: play_random_vs_bot.py  play_random_vs_bot_2.py  play_vs_self.py
examples/v0/: available_moves.py  make_move.py
gym-chess/: README.md
gym_chess/: __init__.py  chess.py
gym_chess/envs/: __init__.py  chess.py  chess_pieces.py  chess_pieces_v4.py  chess_pieces_v5.py  chess_v0.py  chess_v1.py  chess_v2.py  chess_v3.py  chess_v4.py  chess_v5.py  exceptions.py  script.py  test.py  utils.py
gym_chess/examples/v0/: play_random_vs_bot.py  play_vs_self.py
gym_chess/examples/v1/: available_moves.py  make_move.py  play_random_vs_bot.py  play_vs_self.py
gym_chess/test/: basic_moves.py  benchmark.py  capture_moves.py  king_moves.py  test_basic_moves.py  test_benchmark.py  test_capture_moves.py  test_castle_moves.py  test_squares_under_attack.py  utils.py
gym_chess/test/v1/: test_basic_moves.py  test_benchmark.py  test_capture_moves.py  test_castle_moves.py  test_king_moves.py  test_run_moves.py  test_squares_under_attack.py
gym_chess/test/v2/: test_basic_moves.py  test_benchmark.py  test_capture_moves.py  test_castle_moves.py  test_king_moves.py  test_run_moves.py  test_squares_under_attack.py
src/: constants.rs  engine.rs  lib.rs  main.rs  python_api.rs
